# ftag

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
scripts/: ftag-dev.sh
src/ftag/: __main__.py  cli.py  config.py  db.py  models.py  paths.py  repair.py  utils.py
tests/: test_cli.py  test_config.py  test_repo.py
