[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ftag"
version = "0.1.0"
description = "A command-line tool for tagging files with custom labels"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "Jyrki Kokkola" }]
keywords = ["cli", "file-tagging", "tags", "organization", "filesystem"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
  "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "mypy>=1.0",
  "black>=23.0",
  "flake8>=6.0",
  "isort>=5.0",
  "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/jyjokokk/ftag"
Repository = "https://github.com/jyjokokk/ftag"
Issues = "https://github.com/jyjokokk/ftag/issues"

[project.scripts]
ftag = "ftag.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.black]
line-length = 88
target-version = ["py314"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]
known_first_party = ["ftag"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]
